--- a/myairtel.css
+++ b/myairtel.css
@@ -30,7 +30,7 @@ color:white;
 
 #loginbtn{
 	width:100px;
-	height:50px;
+	height:40px;
 	border-radius:10px;
 	box-shadow:2px 2px rgb(16, 84, 245);
 	background-color:transparent;
@@ -57,7 +57,7 @@ color:white;
 	z-index:-1;
 	height: 700px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont {
 		height: auto;
 	}
@@ -67,7 +67,7 @@ color:white;
 	height: 700px;
 	float: left;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a2 {
 		width: 100%;
 		height: auto;
@@ -85,7 +85,7 @@ color:white;
 	color: red;
 	font-size: 70px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#s1 {
 		font-size: 35px;
 		display: block;
@@ -104,7 +104,7 @@ color:white;
 	width: 100%;
 	height: 500px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont1 {
 		height: auto;
 	}
@@ -117,7 +117,7 @@ color:white;
 	display: inline;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#s3 {
 		color: aqua;
 		font-size: 35px;
@@ -128,7 +128,7 @@ color:white;
 	height: 380px;
 	background-color: rgb(246 246 246);
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a3 {
 		height: auto;
 	}
@@ -139,7 +139,7 @@ color:white;
 	font-style: italic;
 	line-height: 35px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a3 p {
 		font-size: 18px;
 	}
@@ -152,7 +152,7 @@ color:white;
 	width: 100%;
 	height: 150px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont2 {
 		height: auto;
 		background-color: bisque;
@@ -174,7 +174,7 @@ color:white;
 	box-shadow:5px 5px 5px blue;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a4 {
 		display: block;
 		text-align: center;
@@ -187,7 +187,7 @@ color:white;
 	font-size:20px;
 	margin-left: 2px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a4 h1 {
 		font-size: 20px;
 	}
@@ -197,7 +197,7 @@ color:white;
 	margin-top: 8px;
 	color: white;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a4 h3 {
 		font-size: 17px;
 	}
@@ -217,7 +217,7 @@ color:white;
 	height: 500px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont3 {
 		height: 300px;
 	}
@@ -238,7 +238,7 @@ color:blue;
 	height: 600px;
 	float: left;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a6 {
 		width: 100%;
 		height: 424px;
@@ -250,7 +250,7 @@ color:blue;
 	font-size:55px;
 	color: red;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont4 h1 {
 		font-size:35px;
 	}
@@ -261,7 +261,7 @@ color:blue;
 }
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#s7 {
 		width: 360px;
 		height: 400px;
@@ -272,7 +272,7 @@ color:blue;
 	margin-left: 180px;
 	height: 60px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#s5 {
 		margin-top: 100px;
 		margin-left:70px;
@@ -281,7 +281,7 @@ color:blue;
 .a6 h2 {
 	margin-left: 180px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a6 h2 {
 		margin-left: 80px;
 	}
@@ -297,7 +297,7 @@ color:blue;
 	font-weight: bold;
 	cursor: pointer;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a6 button {
 		margin-left: 80px;
 	}
@@ -307,7 +307,7 @@ color:blue;
 	height: 700px;
 	background-color:rgb(223, 246, 230);
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont5 {
 		height: auto;
 	}
@@ -318,7 +318,7 @@ color:blue;
 	background-color:rgb(223, 246, 230);
 	float: left;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a9 {
 		width: 100%;
 		display:block;
@@ -330,7 +330,7 @@ color:blue;
 	margin-left: 100px;
 	margin-top: 200px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#s11 {
 		margin-top: 25px;
 		margin-left: 15px;
@@ -340,7 +340,7 @@ color:blue;
 	margin-left: 100px;
 	font-size: 50px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a9 h1 {
 		font-size: 35px;
 		margin-left: 10px;
@@ -352,7 +352,7 @@ color:blue;
 	font-size: 24px;
 	margin-left: 100px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a9 p {
 		font-size: 20px;
 		margin-left: 1px;
@@ -365,7 +365,7 @@ color:blue;
 	background-color: rgb(0, 0, 0);
 	border-radius: 10px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a9 button {
 		margin-left: 1px;
 	}
@@ -380,7 +380,7 @@ color:blue;
 	height: 500px;
 	width: 500px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#s12 {
 		height: 300px;
 		width: 300px;
@@ -400,7 +400,7 @@ color:blue;
 	background-color:black;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.cont6 {
 		height: auto;
 	}
@@ -412,7 +412,7 @@ color:blue;
 	border:none;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a15 {
 		width: 100%;
 		height: auto;
@@ -424,7 +424,7 @@ color:blue;
 	margin-top: 80px;
 	height: 500px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a15 img {
 		width:360px;
 		height: 350px;
@@ -435,7 +435,7 @@ color:blue;
 	font-size: 50px;
 	color: red;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a15 h1 {
 		margin-top: 20px;
 		font-size: 40px;
@@ -446,7 +446,7 @@ color:blue;
 	color: rgb(255, 255, 255);
 	font-weight: 600;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a15 p {
 		font-size: 25px;
 	}
@@ -463,7 +463,7 @@ color:blue;
 	border-radius: 10px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a15 button {
 		margin-left: 20px;
 	}
@@ -487,21 +487,20 @@ color:blue;
 	float: left;
 	background-color:rgb(223, 246, 230);
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a21 {
 		width: 100%;
 		height: auto;
 	}
 }
-.a21 img,
-h1,
-p {
+
+.a21 img,h1,p {
 	margin-left: 150px;
 }
-@media screen and (max-width: 400px) {
-	.a21 img,
-	h1,
-	p {
+
+
+@media screen and (max-width: 600px) {
+	.a21 img,h1,p {
 		margin-left: 20px;
 	}
 }
@@ -509,7 +508,8 @@ p {
 .a21 img {
 	margin-top: 100px;
 }
-@media screen and (max-width: 400px) {
+
+@media screen and (max-width: 600px) {
 	#a21 {
 		margin-left: 10px;
 		width: 360px;
@@ -526,6 +526,12 @@ p {
 	margin-top: 10px;
 }
 
+@media screen and (min-width:1000px) and (max-width:1300px) {
+	#a21{
+		margin-left:50px;
+	}
+}
+
 .foot {
 	width: 100%;
 	height: 240px;
@@ -533,15 +539,15 @@ p {
 }
 
 .a22 {
-	width: 250px;
+	width:18%;
 	float: left;
-	margin: 20px;
+	margin:1%;
 	border-radius: 20px;
 	height: 200px;
 	background-color: rgb(53 135 245);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a22 {
 		width: 100%;
 		height: 130px;
@@ -557,7 +563,7 @@ p {
 	line-height: 50px;
 	font-size: 35px;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#a22 {
 		font-size: 28px;
 		color: white;
@@ -574,7 +580,7 @@ p {
 	color: black;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a22 h2 {
 		margin-top: 0;
 		color: white;
@@ -592,7 +598,7 @@ p {
 	display: flex;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.mainfoot {
 		width: 100%;
 		height: auto;
@@ -606,7 +612,7 @@ p {
 	float: left;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a25 {
 		width: 100%;
 		height:300px;
@@ -622,7 +628,7 @@ p {
 	color: rgb(248, 248, 66);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a25 a {
 		font-size: 10px;
 		margin: 4px;
@@ -635,7 +641,7 @@ p {
 	margin-top: 30px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.c9 {
 		height: auto;
 		width: 100%;
@@ -648,7 +654,7 @@ p {
 	height:373px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a26{
 		height:325px;
 	}
@@ -662,7 +668,7 @@ p {
 	margin-left: 20px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	.a26 img {
 		height: 25px;
 		width: 25px;
@@ -679,7 +685,7 @@ p {
 	margin-left: 30px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#nn {
 		font-size: 10px;
 		color: blue;
@@ -694,7 +700,7 @@ p {
 	position: absolute;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#bb {
 		margin-left: 0px;
 		margin-top: 30px;
@@ -714,7 +720,7 @@ p {
 	display: none;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
 	#icon1 {
 		background-color: white;
 		display: block;
@@ -732,14 +738,14 @@ p {
 	background-color:rgb(223, 246, 230);
 }
 .newfeatures .card{
-	width:40rem;
+	width:44%;
 	float:left;
-	margin-left:80px;
+	margin-left:5%;
 	margin-top:50px;
 	border-radius:15px;
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:600px){
 	.newfeatures .card{
 		width:100%;
         margin-left:0px;
@@ -761,7 +767,7 @@ p {
 	height:50px;
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:600px) {
 	.rights{
 		height:100px;
 		background-color:blue;
@@ -776,7 +782,7 @@ p {
 }
 
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:600px) {
 	.righthalf{
 	width:100%;
 	border:none;
@@ -791,7 +797,7 @@ p {
 	font-weight:600;
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:600px) {
 	.righthalf p{
 		margin-left:0px;
 		font-weight:300;
