--- a/myairtel.css
+++ b/myairtel.css
@@ -42,7 +42,7 @@ color:white;
 
 #loginbtn a{
 	text-decoration:none;
-    color:rgb(1, 13, 253);
+    color:rgb(74, 82, 250);
     font-size:18px;
 	font-weight:500;
 }
@@ -50,65 +50,106 @@ color:white;
 
 /* start from here main cont styling ......... */
 
+.cont{
+	width:100%;
+	height:650px;
+	background-color:rgb(248, 250, 250);
+}
 
-.cont {
-	width: 100%;
-	background-color: rgb(246 246 246);
-	z-index:-1;
-	height: 700px;
-}
-@media screen and (max-width: 600px) {
-	.cont {
-		height: auto;
-	}
-}
-.a2 {
-	width: 50%;
-	height: 700px;
-	float: left;
-}
-@media screen and (max-width: 600px) {
-	.a2 {
-		width: 100%;
-		height: auto;
-		display: block;
+@media screen and (max-width:600px) {
+	.cont{
+		height:900px;
 	}
 }
 
 
-#s2 {
-	margin-top: 50px;
-}
-#s1 {
-	margin-top: 100px;
-	text-align: center;
-	color: red;
-	font-size: 70px;
-}
-@media screen and (max-width: 600px) {
-	#s1 {
-		font-size: 35px;
-		display: block;
-		text-align: justify;
-	}
-	#s2 {
-		height: 250px;
-		display: block;
-		margin-left: 50px;
+@media screen and (min-width:601px) and (max-width:999px) {
+	.cont{
+	height:600px;
 	}
 }
+
+.halfofcont{
+	width:45%;
+	margin-left:2.5%;
+    float:left;
+	height:600x;
+    margin-top:50px;
+    border-radius:15px;
+}
+
+@media screen and (max-width:600px) {
+	.halfofcont{
+		width:100%;
+        margin-left:0%;
+        margin-top:20px;
+        height:400px;
+        border-radius:15px;
+	}
+}
+
+
+
+#s1{
+	font-size:65px;
+}
+
+
+@media screen and (max-width:600px) {
+	#s1{
+	font-size:45px;
+	}
+}
+
+
+@media screen and (min-width:601px) and (max-width:999px) {
+	#s1{
+	font-size:50px;
+	margin-left:20px;
+	}
+}
+
+
+@media screen and (max-width:600px) {
+	#s2{
+		width:100%;
+		height:100%;
+	}
+}
+
+
+@media screen and (min-width:601px) and (max-width:999px) {
+	#s2{
+	width:100%;
+	}
+}
+
+
+
+
+
+/* start from here cont1 styling ..... */
+
 
 .cont1 {
-	display: grid;
+	/* display: grid; */
 	background-color: rgb(246 246 246);
 	width: 100%;
-	height: 500px;
+	height: 400px;
 }
+
 @media screen and (max-width: 600px) {
 	.cont1 {
-		height: auto;
+		height:auto;
 	}
 }
+
+@media screen and (min-width:601px) and (max-width:1100px) {
+	.cont1{
+		height:700px;
+	}
+}
+
 
 #s3 {
 	text-align: center;
@@ -123,6 +164,17 @@ color:white;
 		font-size: 35px;
 	}
 }
+
+
+@media screen and (min-width:601px) and (max-width:1100px) {
+	#s3{
+	margin-left:-50px;
+	}
+}
+
+
+
+
 .a3 {
 	width: 100%;
 	height: 380px;
@@ -134,16 +186,32 @@ color:white;
 	}
 }
 
+
 .a3 p {
 	font-size: 25px;
 	font-style: italic;
 	line-height: 35px;
 }
+
 @media screen and (max-width: 600px) {
 	.a3 p {
 		font-size: 18px;
 	}
 }
+
+
+@media screen and (min-width:601px) and (max-width:1100px) {
+	.a3 p{
+	margin-left:50px;
+	font-size:30px;
+	line-height:35px;
+	margin-top:15px;
+	}
+}
+
+
+
+/* start from here cont2 styling... */
 
 .cont2 {
 	display: flex;
